pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: timeo

spec:
  containers:
    - image: timeo:latest
      name: timeo
      imagePullPolicy: Never
