service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeo
spec:
  selector:
    servicename: timeo
  ports:
    - port: 80
      targetPort: 5000
