ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timeo

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timeo
                port:
                  number: 80
